Manager Jobseeker for Admin(Dashboard) - View List Jobseeker - View Detail Jobseeker - Add New Jobseeker - Search Jobseeker - Ban Jobseeker